[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/starwars.gd" type="Script" id=1]
[ext_resource path="res://scenes/italy/italyBack.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/italy/starwars.jpg" type="Texture" id=3]
[ext_resource path="res://assets/fonts/impact.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/nextBtn.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/SkipBtn.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "load"
tracks/0/type = "value"
tracks/0/path = NodePath("starwars:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="starwars" type="Node2D"]
script = ExtResource( 1 )

[node name="italyBack" parent="." instance=ExtResource( 2 )]

[node name="starwars" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 516.706, 319.838 )
scale = Vector2( 0.44211, 0.44211 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 452.173
margin_top = 37.6835
margin_right = 579.173
margin_bottom = 110.684
custom_fonts/font = SubResource( 1 )
text = "THEME 2:
STAR WARS"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "load"
anims/load = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="nextBtn" parent="." instance=ExtResource( 5 )]

[node name="SkipBtn" parent="." instance=ExtResource( 6 )]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="nextBtn" to="." method="_on_readyBtn_pressed"]
[connection signal="pressed" from="SkipBtn" to="." method="_on_SkipBtn_pressed"]
